--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
+    "razorpay": "^2.9.0",
     "validator": "^13.9.0"
   }
 }
