--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.3.1",
     "multer": "^1.4.5-lts.1",
     "razorpay": "^2.9.0",
+    "remove.bg": "^1.3.0",
     "validator": "^13.9.0"
   }
 }
