--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "razorpay": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-lightbox": "^5.1.4",
     "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
@@ -20,7 +22,8 @@
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.7.12",
     "validator": "^13.9.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.11.3"
   },
   "scripts": {
     "start": "react-scripts start",
