--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "razorpay": "^2.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-id-swiper": "^4.0.0",
     "react-image-lightbox": "^5.1.4",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.23",
